# API-for-Google-Lens

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  api.py  config.py  errors.py  main.py  models.py  observability.py  throttling.py
app/lens/: __init__.py  cache.py  classifier.py  direct.py  service.py
scripts/: lint_docstring_examples.py  measure_lens_api.py
tests/: test_api_lifecycle.py  test_classifier.py  test_config.py  test_direct_lens_client.py  test_docstring_examples.py  test_errors.py  test_lint_docstring_examples.py  test_measure_lens_api.py  test_observability.py  test_provider_credit_errors.py  test_response_cache.py  test_url_parsing.py
tests/fixtures/google_lens/: google-search-exact.html  google-search-visual.html
tests/fixtures/image_urls/: large.txt  small.txt
